# community-chat

./: .gitignore  README.md  STATUS_REPORT.md  TODO.md  package-lock.json  poc_planning.md  poc_suggestion.md
.session/: dm-feature.md  migration.md
app/: server.py
archive/: python_folder_structure.md
backend/: server.py
backend/tests/: cli_test.py  test_client.py
client/: README.md  pubspec.yaml
client/test/: encryption_test.dart  websocket_connection_test.dart
deploy/: docker-compose.yml
server/: Cargo.toml  Dockerfile
server/src/: db.rs  main.rs  ws.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  lib.rs  mqtt.rs
src/components/: MemberList.tsx  MessageInput.tsx  MessageList.tsx
tests/: cli_test.py
